--- a/src/components/VisitorCounter.astro
+++ b/src/components/VisitorCounter.astro
@@ -28,6 +28,8 @@
 </script>
 
 <style>
+    @import url("https://fonts.googleapis.com/css2?family=VT323&display=swap");
+
     .visitor-counter {
         margin-top: 30px;
         border: 1px solid #00ff00;
@@ -42,8 +44,8 @@
         border: 2px inset #808080;
         background: black;
         color: red;
-        font-family: "Courier New", monospace;
-        font-size: 14px;
+        font-family: "VT323", monospace;
+        font-size: 24px; /* Increased size for pixel font */
         margin-top: 5px;
         letter-spacing: 3px;
         padding: 2px;
